# btc-libre-governance

./: .env.example  .gitignore  README.md  docker-compose.yaml  makefile
contracts/: package-lock.json  package.json
contracts/btclgovernan/: CMakeLists.txt  README.md  btclgovernan.abi  btclgovernan.wasm
contracts/btclgovernan/include/: btclgovernan.hpp
contracts/btclgovernan/ricardian/: btclgovernan.clauses.md  btclgovernan.contracts.md
contracts/btclgovernan/src/: CMakeLists.txt  btclgovernan.cpp
contracts/tests/: btclgovernan.test.js  utils.js
docs/: btc-libre-governance.drawio  data-model.drawio  readme.md
hapi/: package.json
hasura/: Dockerfile
